# bunnet

./: .flake8  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  pydoc-markdown.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: github-actions-lint.yml  github-actions-mypy.yml
api-documentation/document/: index.html
api-documentation/fields/: index.html
api-documentation/interfaces/: index.html
api-documentation/operators/find/: index.html
api-documentation/operators/update/: index.html
api-documentation/query/: index.html
bunnet/: __init__.py  operators.py
bunnet/executors/: migrate.py
bunnet/migrations/: database.py  models.py  runner.py
bunnet/migrations/controllers/: base.py  free_fall.py  iterative.py
bunnet/odm/: actions.py  bulk.py  documents.py  fields.py  models.py  union_doc.py  views.py
bunnet/odm/custom_types/: __init__.py
bunnet/odm/custom_types/bson/: binary.py
bunnet/odm/interfaces/: aggregate.py  aggregation_methods.py  find.py  getters.py  inheritance.py  setters.py  update.py
bunnet/odm/operators/find/: __init__.py  array.py  bitwise.py  comparison.py  element.py  evaluation.py  geospatial.py  (+1 more)
bunnet/odm/queries/: aggregation.py  cursor.py  delete.py  find.py  update.py
bunnet/odm/settings/: base.py  document.py  union_doc.py  view.py
bunnet/odm/utils/: dump.py  encoder.py  find.py  general.py  init.py  parsing.py  projection.py  relations.py  self_validation.py  state.py  typing.py
changelog/: index.html
code-of-conduct/: index.html
development/: index.html
docs/: changelog.md  development.md  getting-started.md  index.md
docs/sync_tutorial/: aggregate.md  collection_setup.md  defining-a-document.md  delete.md  insert.md  multi-model.md  revision.md  sync.md  views.md
docs/tutorial/: actions.md  cache.md  defining-a-document.md  find.md  indexes.md  inheritance.md  init.md  lazy_parse.md  migrations.md  multi-model.md  on_save_validation.md  relations.md  revision.md  state_management.md  time_series.md  update.md
getting-started/: index.html
search/: search_index.json
tests/: conftest.py  models.py
tests/fastapi/: app.py  conftest.py  models.py  routes.py  test_api.py
tests/migrations/: conftest.py  test_break.py  test_directions.py  test_free_fall.py  test_remove_indexes.py
tests/migrations/iterative/: test_change_subfield.py  test_change_value.py  test_change_value_subfield.py  test_pack_unpack.py  test_rename_field.py
tests/odm/: conftest.py  models.py  test_actions.py  test_cache.py  test_concurrency.py  test_consistency.py  test_cursor.py  test_deprecated.py  test_encoder.py  test_expression_fields.py  test_fields.py  test_id.py  test_lazy_parsing.py  test_relations.py  test_root_models.py  test_run.py  test_state_management.py  test_timesries_collection.py  test_typing_utils.py  test_views.py  views.py
tests/odm/custom_types/: test_bson_binary.py
tests/odm/documents/: test_aggregate.py  test_bulk_write.py  test_count.py  test_create.py  test_delete.py  test_distinct.py  test_exists.py  test_find.py  test_inheritance.py  test_init.py  test_inspect.py  test_multi_model.py  test_pydantic_config.py  test_pydantic_extras.py  test_replace.py  test_revision.py  test_sync.py  test_update.py  test_validation_on_save.py
tests/odm/query/: test_aggregate.py  test_aggregate_methods.py  test_delete.py  test_find.py  test_update.py  test_update_methods.py
tests/typing/: aggregation.py  find.py  models.py
tutorial/aggregation/: index.html
tutorial/cache/: index.html
tutorial/defining-a-document/: index.html
tutorial/event-based-actions/: index.html
tutorial/finding-documents/: index.html
tutorial/indexes/: index.html
tutorial/inheritance/: index.html
tutorial/initialization/: index.html
tutorial/inserting-into-the-database/: index.html
tutorial/lazy-parsing/: index.html
tutorial/migrate-from-beanie/: index.html
tutorial/migrations/: index.html
tutorial/multi-model-pattern/: index.html
tutorial/on-save-validation/: index.html
tutorial/relations/: index.html
tutorial/revision/: index.html
tutorial/state-management/: index.html
tutorial/time-series/: index.html
tutorial/updating-&-deleting/: index.html
tutorial/views/: index.html
(+28 files in other folders)
