[tool.poetry]
name = "bunnet"
version = "1.0.1"
description = "Synchronous Python ODM for MongoDB"
authors = ["Roman <roman-right@protonmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/roman-right/bunnet"
repository = "https://github.com/roman-right/bunnet"
keywords = ["mongodb", "odm", "orm", "pydantic", "mongo", "synchronous", "python"]
include = [
    "LICENSE",
    "bunnet/py.typed"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = ">=1.9.0"
yarl = ">=1.6"
pymongo ="*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
pytest = "^6.0.0"
pytest-cov = "^2.8.1"
Pygments = "^2.8.0"
dnspython = "^2.1.0"
mkdocs-material = "^7.1.0"
pydoc-markdown = "3.13"
flake8 = ">=3"
pyright = ">=0"
mkdocs = "1.1"
icecream = "^2.1.1"
jinja2 = "3.0.3"
fastapi = "^0.78.0"
asgi-lifespan = "^1.0.1"
httpx = "^0.23.0"
Markdown = "^3.4.1"
importlib-metadata = "^4.12.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing --cov=bunnet --cov-branch --cov-fail-under=85"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.poetry.scripts]
bunnet = "bunnet.executors.migrate:migrations"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml"
ignore_missing_imports = true

[tool.pyright]
include = ["tests/typing", "bunnet"]